P5 E-learning/force-app/main/default/objects/Respuesta__c/Respuesta__c.object-meta.xml
<CustomObject>
    <label>Respuesta</label>
    <nameField>
        <label>Respuesta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Respuestas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>