P5 E-learning/force-app/main/default/objects/Respuesta__c/fields/Contenido__c.field-meta.xml
<CustomField>
    <fullName>Contenido__c</fullName>
    <label>Contenido</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>