P5 E-learning/force-app/main/default/objects/Respuesta__c/fields/Es_Correcta__c.field-meta.xml
<CustomField>
    <fullName>Es_Correcta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si tildamos es la opcion correcta a tener en cuenta</description>
    <inlineHelpText>Si tildamos es la opcion correcta a tener en cuenta</inlineHelpText>
    <label>Es Correcta?</label>
    <type>Checkbox</type>
</CustomField>