P5 E-learning/force-app/main/default/objects/Respuesta__c/fields/Pregunta__c.field-meta.xml
<CustomField>
    <fullName>Pregunta__c</fullName>
    <label>Pregunta</label>
    <referenceTo>Pregunta__c</referenceTo>
    <relationshipLabel>Respuestas</relationshipLabel>
    <relationshipName>Respuestas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>