P5 E-learning/force-app/main/default/objects/Respuesta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Pregunta__c</columns>
    <columns>NAME</columns>
    <columns>Contenido__c</columns>
    <columns>Es_Correcta__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>